--- a/type-challenge/package.json
+++ b/type-challenge/package.json
@@ -7,5 +7,8 @@
     "@types/node": "^18.7.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "prettier": "^2.7.1"
   }
 }
